--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "escape-string-regexp": "^1.0.5",
     "gulp": "^3.9.1",
     "gulp-eslint-auto-fix": "^1.1.0",
     "gulp-sourcemaps": "^2.6.4",
@@ -10,7 +11,8 @@
     "react-dom": "^16.3.2",
     "react-google-maps": "^9.4.5",
     "react-scripts": "1.1.4",
-    "recompose": "^0.27.0"
+    "recompose": "^0.27.0",
+    "sort-by": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
