added content to info window

--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "gulp": "^3.9.1",
     "gulp-eslint-auto-fix": "^1.1.0",
     "gulp-sourcemaps": "^2.6.4",
+    "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
+    "react-foursquare": "^1.0.3",
     "react-google-maps": "^9.4.5",
     "react-scripts": "1.1.4",
     "recompose": "^0.27.0",
